# niral-hackathon-24

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  constants.py  extract_data.py  models.py
app/utils/: bulk_file_to_text.py  label_mapping.py  pdf_to_text.py  pipeline.py  save_temp_file.py
model_training/: 1_create_customer_objection_classification_dataset.ipynb  2_finetune_bert_customer_objection_classification.ipynb  3_create_policy_classification_dataset.ipynb  4_finetune_bert_policy_classification.ipynb  5_finetune_bert_case_sales_ner_classification.ipynb
scripts/: label_customer_objections.py
